Refactor HTML structure and enhance styling for reservation summary page. Updated class names for better readability, improved layout with new summary and section header classes, and added font styling for consistency. Adjusted button and table element structures for improved UX.

--- a/9.html
+++ b/9.html
@@ -28,15 +28,15 @@
     </div>
   </header>
   <main class="gh-main gh-main-form">
-    <div class="gh-main-title" >
+    <div class="gh-main-title">
       <h1 class="gh-main-section-title">Reservation Summary</h1>
       <div class="gh-text-right gh-mb-1-5">
-       <button class="gh-btn gh-btn-outline" onclick="window.location.href='index.html'">
-        Return to Main Planner Start Page
-       </button>
+        <button class="gh-btn gh-btn-outline" onclick="window.location.href='index.html'">
+          Return to Main Planner Start Page
+        </button>
       </div>
     </div>
-    
+
     <nav class="gh-stepper" aria-label="Reservation steps">
       <ul>
         <li class="gh-step gh-step-completed">Customer account</li>
@@ -66,21 +66,19 @@
           </tr>
         </tbody>
       </table>
-      <div class="gh-mb-1-5">
+      <div class="gh-summary-help">
         Need to modify your customer visit date? Contact
         <a href="mailto:customervisit@greenheck.com">customervisit@greenheck.com</a>
       </div>
-      <div class="gh-flex gh-flex-wrap gh-gap-2 gh-mb-2-5">
-        <div><strong>Representative:</strong><br />Fischbach, Gary</div>
-        <div><strong>Office:</strong><br />TMS JOHNSON INC 1344</div>
-        <div>
-          <strong>Area Sales Manager:</strong><br />Eric Tufo - North Central
-        </div>
-        <div><strong>Rep Attendees:</strong><br />—</div>
+      <div class="gh-summary-row">
+        <div class="gh-summary-item"><strong>Representative:</strong><span class="gh-font-helvetica-neue-roman">Fischbach, Gary</span></div>
+        <div class="gh-summary-item"><strong>Office:</strong><span class="gh-font-helvetica-neue-roman">TMS JOHNSON INC 1344</span></div>
+        <div class="gh-summary-item"><strong>Area Sales Manager:</strong><span class="gh-font-helvetica-neue-roman">Eric Tufo - North Central</span></div>
+        <div class="gh-summary-item"><strong>Rep Attendees:</strong><span class="gh-font-helvetica-neue-roman">—</span></div>
       </div>
-      <h2 class="gh-form-title gh-form-title-left">Companies:</h2>
-      <div class="gh-text-right ">
-        <a href="#" class="gh-color-primary gh-underline gh-fw-500">Add a Company</a>
+      <div class="gh-section-header gh-section-header-between">
+        <h2 class="gh-form-title gh-form-title-left">Companies:</h2>
+        <a href="#" class="gh-color-primary gh-underline gh-fw-500 gh-font-helvetica-neue-medium">Add a Company</a>
       </div>
       <table class="gh-table-medium gh-mb-2-5">
         <thead>
@@ -112,63 +110,63 @@
             </td>
           </tr>
           <tr>
-            <td>Michaud Copley & Erickson Engineering Solutions</td>
+            <td><span class="gh-font-helvetica-neue-roman">Michaud Copley & Erickson Engineering Solutions</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>AKF Group</td>
+            <td><span class="gh-font-helvetica-neue-roman">AKF Group</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>IMS Johnson</td>
+            <td><span class="gh-font-helvetica-neue-roman">IMS Johnson</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>Absolute Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Absolute Mechanical</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>galas O'Brien</td>
+            <td><span class="gh-font-helvetica-neue-roman">galas O'Brien</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>Schadegg Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Schadegg Mechanical</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>Northland Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Northland Mechanical</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>Sten Engineering</td>
+            <td><span class="gh-font-helvetica-neue-roman">Sten Engineering</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
             </td>
           </tr>
           <tr>
-            <td>Steiner Plumbing Electric & Heating</td>
+            <td><span class="gh-font-helvetica-neue-roman">Steiner Plumbing Electric & Heating</span></td>
             <td>
               <a href="#" class="edit-company-link">Edit</a>
               <a href="#">Remove</a>
@@ -176,10 +174,11 @@
           </tr>
         </tbody>
       </table>
-      <h2 class="gh-form-title gh-form-title-left">Customer Attendees:</h2>
-      <div class="gh-text-right ">
-        <a href="#" class="gh-color-primary gh-underline gh-fw-500">Add Attendees</a>
+      <div class="gh-section-header gh-section-header-between">
+        <h2 class="gh-form-title gh-form-title-left">Customer Attendees:</h2>
+        <a href="#" class="gh-color-primary gh-underline gh-fw-500 gh-font-helvetica-neue-medium">Add Attendees</a>
       </div>
+
       <table class="gh-table-medium gh-mb-2-5">
         <thead>
           <tr>
@@ -192,7 +191,7 @@
         <tbody>
           <tr>
             <td>Callaghan, Emma</td>
-            <td>Michaud Cooley Erickson</td>
+            <td><span class="gh-font-helvetica-neue-roman">Michaud Cooley Erickson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-green gh-align-middle">check_circle</span>
             </td>
@@ -200,7 +199,7 @@
           </tr>
           <tr>
             <td>Compaan, Emily</td>
-            <td>Michaud Cooley Erickson</td>
+            <td><span class="gh-font-helvetica-neue-roman">Michaud Cooley Erickson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-green gh-align-middle">check_circle</span>
             </td>
@@ -208,7 +207,7 @@
           </tr>
           <tr>
             <td>Futura, Jim</td>
-            <td>TMS Johnson</td>
+            <td><span class="gh-font-helvetica-neue-roman">TMS Johnson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -216,7 +215,7 @@
           </tr>
           <tr>
             <td>Gebel, Craig</td>
-            <td>Northland Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Northland Mechanical</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -224,7 +223,7 @@
           </tr>
           <tr>
             <td>Smithers, Clay</td>
-            <td>IMS Johnson</td>
+            <td><span class="gh-font-helvetica-neue-roman">IMS Johnson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -232,7 +231,7 @@
           </tr>
           <tr>
             <td>Lakener, KLE</td>
-            <td>TMS Johnson</td>
+            <td><span class="gh-font-helvetica-neue-roman">TMS Johnson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -240,7 +239,7 @@
           </tr>
           <tr>
             <td>Lange, Cooper</td>
-            <td>Countryside Plumbing Electric & Heating</td>
+            <td><span class="gh-font-helvetica-neue-roman">Countryside Plumbing Electric & Heating</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -248,7 +247,7 @@
           </tr>
           <tr>
             <td>Larson, Kyle</td>
-            <td>Schadegg Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Schadegg Mechanical</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -256,7 +255,7 @@
           </tr>
           <tr>
             <td>Lind, Mike</td>
-            <td>IMS Johnson</td>
+            <td><span class="gh-font-helvetica-neue-roman">IMS Johnson</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -264,7 +263,7 @@
           </tr>
           <tr>
             <td>Markuson, Logan</td>
-            <td>Legend Mechanical</td>
+            <td><span class="gh-font-helvetica-neue-roman">Legend Mechanical</span></td>
             <td>
               <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
             </td>
@@ -272,35 +271,10 @@
           </tr>
         </tbody>
       </table>
-      <h2 class="gh-form-title gh-form-title-left">Rep Attendees:</h2>
-      <div class="gh-text-right ">
-        <a href="#" class="gh-color-primary gh-underline gh-fw-500">Add Rep Attendees</a>
-      </div>
-      <div class="gh-custom-select" id="rep-attendee-names-select" tabindex="0" aria-haspopup="listbox" aria-expanded="false" data-multiselect="true">
-        <button class="gh-select-trigger" aria-label="Select attendee name(s)" type="button">
-          <span class="gh-select-value">Select attendee name(s)</span>
-          <span class="material-symbols-outlined">expand_more</span>
-        </button>
-        <ul class="gh-select-options" role="listbox" hidden>
-          <li class="gh-select-option" role="option" data-value="none">
-            <label class="gh-checkbox-label">
-              <input type="checkbox" class="gh-checkbox gh-rep-none" tabindex="-1" />
-              <span class="gh-option-bold">NONE - No rep(s) attending</span>
-            </label>
-          </li>
-          <li class="gh-select-option" role="option" data-value="fischbach-gary">
-            <label class="gh-checkbox-label">
-              <input type="checkbox" class="gh-checkbox" tabindex="-1" />
-              <span class="gh-option-bold">Fischbach, Gary</span>
-            </label>
-          </li>
-          <li class="gh-select-option" role="option" data-value="smith-jane">
-            <label class="gh-checkbox-label">
-              <input type="checkbox" class="gh-checkbox" tabindex="-1" />
-              <span class="gh-option-bold">Smith, Jane</span>
-            </label>
-          </li>
-        </ul>
+
+      <div class="gh-section-header gh-section-header-between">
+        <h2 class="gh-form-title gh-form-title-left">Rep Attendees:</h2>
+        <a href="#" class="gh-color-primary gh-underline gh-fw-500 gh-font-helvetica-neue-medium">Add Rep Attendees</a>
       </div>
       <div class="gh-selected-attendees mt-4">
         <div class="gh-selected-label">Selected Rep Attendee(s)</div>
