--- a/9.html
+++ b/9.html
@@ -209,7 +209,7 @@
             <td>Futura, Jim</td>
             <td><span class="gh-font-helvetica-neue-roman">TMS Johnson</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -217,15 +217,15 @@
             <td>Gebel, Craig</td>
             <td><span class="gh-font-helvetica-neue-roman">Northland Mechanical</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
           <tr>
             <td>Smithers, Clay</td>
-            <td><span class="gh-font-helvetica-neue-roman">IMS Johnson</span></td>
+            <td><span class="gh-font-helvetica-neue-roman">TMS Johnson</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-green gh-align-middle">check_circle</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -233,7 +233,7 @@
             <td>Lakener, KLE</td>
             <td><span class="gh-font-helvetica-neue-roman">TMS Johnson</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -241,7 +241,7 @@
             <td>Lange, Cooper</td>
             <td><span class="gh-font-helvetica-neue-roman">Countryside Plumbing Electric & Heating</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -249,7 +249,7 @@
             <td>Larson, Kyle</td>
             <td><span class="gh-font-helvetica-neue-roman">Schadegg Mechanical</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -257,7 +257,7 @@
             <td>Lind, Mike</td>
             <td><span class="gh-font-helvetica-neue-roman">IMS Johnson</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-green gh-align-middle">check_circle</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -265,7 +265,7 @@
             <td>Markuson, Logan</td>
             <td><span class="gh-font-helvetica-neue-roman">Legend Mechanical</span></td>
             <td>
-              <span class="material-symbols-outlined gh-color-red gh-align-middle">error</span>
+              <span class="material-symbols-outlined gh-color-red gh-align-middle">warning</span>
             </td>
             <td><a href="#">Edit</a> <a href="#">Remove</a></td>
           </tr>
@@ -276,10 +276,28 @@
         <h2 class="gh-form-title gh-form-title-left">Rep Attendees:</h2>
         <a href="#" class="gh-color-primary gh-underline gh-fw-500 gh-font-helvetica-neue-medium">Add Rep Attendees</a>
       </div>
-      <div class="gh-selected-attendees mt-4">
-        <div class="gh-selected-label">Selected Rep Attendee(s)</div>
-        <div class="gh-selected-list"></div>
-      </div>
+      <table class="gh-table-medium gh-mb-2-5">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Company</th>
+            <th>Completion Status</th>
+            <th class="gh-w-120px">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Fischbach, Gary</td>
+            <td>TMS JOHNSON INC 1344</td>
+            <td>
+              <span class="material-symbols-outlined gh-color-green gh-align-middle">check_circle</span>
+            </td>
+            <td>
+              <a href="#">Edit</a> <a href="#">Remove</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
       <h2 class="gh-form-title gh-form-title-left">
         Travel Information (All Attendees):
       </h2>
