Refactor HTML structure by updating section header class names for consistency. Changed .gh-main-section-title to .gh-page-title and .gh-main-desc to .gh-title-desc across multiple HTML files, enhancing readability and styling uniformity.

--- a/3.html
+++ b/3.html
@@ -29,10 +29,10 @@
   </header>
   <main class="gh-main gh-main-table">
     <section class="gh-section">
-      <h1 class="gh-main-section-title">
+      <h1 class="gh-page-title">
         Continue with existing customer visit
       </h1>
-      <p class="gh-main-desc">
+      <p class="gh-title-desc">
         Modify a new visit and continue where you left off.
       </p>
       <div class="gh-host-label">
@@ -71,8 +71,8 @@
     </section>
     <div class="gh-or-divider"><span>– OR –</span></div>
     <section class="gh-section">
-      <h2 class="gh-main-section-title">Select a New Customer Visit</h2>
-      <p class="gh-main-desc">
+      <h2 class="gh-page-title">Select a New Customer Visit</h2>
+      <p class="gh-title-desc">
         Reserve a new group visit from the availability below.
       </p>
       <div class="gh-table-container">
