--- a/4.html
+++ b/4.html
@@ -29,8 +29,8 @@
     </div>
   </header>
   <main class="gh-main gh-main-table">
-    <h1 class="gh-main-section-title">Selected Visit</h1>
-    <p class="gh-main-desc">
+    <h1 class="gh-page-title">Selected Visit</h1>
+    <p class="gh-title-desc">
       You may proceed to enter customer details or reserve and
     </p>
     <div class="gh-table-container">
