--- a/5.html
+++ b/5.html
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="gh-main gh-main-form">
-    <h1 class="gh-main-section-title">Customer Account</h1>
+    <h1 class="gh-page-title">Customer Account</h1>
     <nav class="gh-stepper" aria-label="Reservation steps">
       <ul>
         <li class="gh-step gh-step-current">Customer account</li>
