--- a/9.html
+++ b/9.html
@@ -29,7 +29,7 @@
   </header>
   <main class="gh-main gh-main-form">
     <div class="gh-main-title">
-      <h1 class="gh-main-section-title">Reservation Summary</h1>
+      <h1 class="gh-page-title">Reservation Summary</h1>
       <div class="gh-text-right gh-mb-1-5">
         <button class="gh-btn gh-btn-outline" onclick="window.location.href='index.html'">
           Return to Main Planner Start Page
@@ -491,7 +491,7 @@ Develop and maintain long-standing partnerships with our customers. From emergen
         Edit Attendee Additional Information
       </h2>
       <div class="modal-title-group">
-        <div class="gh-label">Rep Attendee Name:</div>
+        <div class="gh-label">Attendee Name:</div>
         <div id="edit-rep-name" class="gh-rep-attendee-name">Fischbach, Gary</div>
       </div>
       <hr class="gh-mb-1-5" />
