--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </div>
   </header>
   <main class="gh-main" aria-labelledby="main-title">
-    <h1 class="gh-main-section-title">
+    <h1 class="gh-page-title">
       Start a new reservation or continue an existing one
     </h1>
-    <p class="gh-main-desc">
+    <p class="gh-title-desc">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus
       urna nibh, quis sollicitudin mi suscipit.
     </p>
