--- a/2.html
+++ b/2.html
@@ -32,8 +32,8 @@
     </div>
   </header>
   <main class="gh-main gh-main-table">
-    <h1 class="gh-main-section-title">Select a New Customer Visit</h1>
-    <p class="gh-main-desc">
+    <h1 class="gh-page-title">Select a New Customer Visit</h1>
+    <p class="gh-title-desc">
       Reserve a new visit from the availability below.
     </p>
     <div class="gh-table-container">
