Update HTML structure and enhance accessibility across multiple files. Added width and height attributes to logo images for better layout control, improved label associations with form elements for accessibility, and updated button elements to use anchor tags for better semantic structure. Enhanced CSS for buttons and modal styling to improve user experience.

--- a/4.html
+++ b/4.html
@@ -17,7 +17,7 @@
   <header class="gh-header">
     <div class="gh-header-container">
       <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
+        <img width="285" height="70" src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
       </div>
       <div class="gh-header-right">
         <div class="gh-user-info">
