--- a/6.html
+++ b/6.html
@@ -16,7 +16,7 @@
   <header class="gh-header">
     <div class="gh-header-container">
       <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
+        <img width="285" height="70" src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
       </div>
       <div class="gh-header-right">
         <div class="gh-user-info">
@@ -100,7 +100,7 @@
             <textarea id="project-focus" class="gh-textarea" maxlength="250" placeholder="Type here..."></textarea>
           </div>
           <div class="gh-label-group">
-            <label class="gh-label">Select areas of interest</label>
+            <label for="areas-interest-select" class="gh-label">Select areas of interest</label>
             <div class="gh-custom-select" id="areas-interest-select" tabindex="0" aria-haspopup="listbox" aria-expanded="false">
               <button class="gh-select-trigger" aria-label="Select areas of interest" type="button">
                 <span class="gh-select-value">Select</span>
