Update header structure in multiple HTML files to wrap logo images in anchor tags for improved accessibility and navigation. Adjusted CSS margins in base.css for better layout control.

--- a/9.html
+++ b/9.html
@@ -80,7 +80,9 @@
   <header class="gh-header">
     <div class="gh-header-container">
       <div class="gh-header-left">
-        <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" loading="lazy" srcset="Greenheck_Logo_Horiz_Blue@2x.png 2x, Greenheck_Logo_Horiz_Blue@2x.png 1x" />
+        <a href="/" target="_blank">
+          <img src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" loading="lazy" srcset="Greenheck_Logo_Horiz_Blue@2x.png 2x, Greenheck_Logo_Horiz_Blue@2x.png 1x" />
+        </a>
       </div>
       <div class="gh-header-right">
         <div class="gh-user-info">
