--- a/rep-attendees.html
+++ b/rep-attendees.html
@@ -1,7 +1,9 @@
 <header class="gh-header">
   <div class="gh-header-container">
     <div class="gh-header-left">
-      <img width="285" height="70" src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
+      <a href="/" target="_blank">
+        <img width="285" height="70" src="Greenheck_Logo_Horiz_Blue@2x.png" alt="Greenheck Logo" class="gh-logo" />
+      </a>
     </div>
     <div class="gh-header-right">
       <div class="gh-user-info">
