Refactor reservation summary layout by removing unnecessary margin and alignment styles in HTML and CSS. Simplified the structure for improved readability and consistency.

--- a/9.html
+++ b/9.html
@@ -96,7 +96,7 @@
   <main class="gh-main gh-main-form">
     <div class="gh-main-title">
       <h1 class="gh-page-title">Reservation Summary</h1>
-      <div class="gh-text-right gh-mb-1-5">
+      <div class="gh-text-right">
         <a class="gh-btn gh-btn-outline" href="index.html">
           Return to Main Planner Start Page
         </a>
